# DAFE_CPP_014

./: Token.h  Token_stream.cpp  Token_stream.h  Variable.cpp  Variable.h  funcs.cpp  funcs.h  functions.h  main.cpp
Allaberdin_Bogdan/Calculator/: Token.h
Allaberdin_Bogdan/Vector/: vector 18.cpp  vector 19.cpp  vector17.cpp
Allaberdin_Bogdan/calculator/: Token_stream.h  functions.cpp  main.cpp
Davi_Cruz/: calculator.cpp  calculator.h  input.txt  main.cpp  result.txt  token.cpp  token.h  variable.cpp  variable.h
GvozdkovNikita/: Token.h  Token_stream.h  Variable.h  calc.pro  functions.cpp  functions.h  input.txt  main.cpp  token_stream.cpp  variable.cpp
GvozdkovVectors/build-vector17-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
GvozdkovVectors/build-vector18-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
GvozdkovVectors/vector17/: Vector.cpp  Vector.h  (+2 more)
Orlova_Alina/: CMakeLists.txt  calculator.cpp  calculator.h  main.cpp  token.cpp  token.h  variable.cpp  variable.h
calc/: Token_stream.h  calc.pro  functions.cpp  main.cpp
calculator Карсанов Тамерлан/: Token.h  Token_stream.cpp  Token_stream.h  Variable.cpp  Variable.h  funcs.cpp  funcs.h  main.cpp  results.txt  tests.txt
implementation_vector/: CMakeLists.txt
implementation_vector/test/: CMakeLists.txt  vector17test.cpp  vector18test.cpp  vector19test.cpp
vector_v_1 Карсанов Т./: main.cpp
vector_v_2 Карсанов Т./: main.cpp
vector_v_3 Карсанов Т./: main.cpp
Копейкин_Борис/: READMEPLEASE.md  calculator08buggy (1).cpp
(+34 files in other folders)
